octave3.0 (1:3.0.3~rc2-1) UNRELEASED; urgency=low

  * Change dont_set_helvetica.dpatch to use an asterisk (*) instead of an
    empty string for the font; see
    http://thread.gmane.org/gmane.comp.gnu.octave.bugs/9843
    for the reasoning. Saving greek symbols as .png or .jpeg continues to not
    work with this, though.

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Wed, 24 Sep 2008 20:49:07 +0200

octave3.0 (1:3.0.2-4) experimental; urgency=low

  * Add octaveX.Y-common package containing the architecture-independent
    files, which were taking too much place in the architecture-dependent
    main package octaveX.Y

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 15 Sep 2008 11:07:18 +0200

octave3.0 (1:3.0.2-3) experimental; urgency=low

  * debian/in/PACKAGE.triggers, debian/in/PACKAGE.postinst: Use a dpkg
    trigger for updating the Octave's pkg database (via "pkg rebuild").  A
    package providing an Octave pkg will activate the trigger.
  * debian/in/PACKAGE.lintian-overrides: Add Lintian overrides for binary
    and shared library setting RPATH
  * debian/rules: Add BUGS to the savefiles list because it is present in
    the tarball and is modified when building the documentation

 -- Rafael Laboissiere <rafael@debian.org>  Fri, 12 Sep 2008 08:29:38 +0200

octave3.0 (1:3.0.2-2) experimental; urgency=low

  * Restore the epoch in the version number

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 30 Aug 2008 23:54:37 +0200

octave3.0 (3.0.2-1) experimental; urgency=low

  [ Rafael Laboissiere ]
  * debian/rules: Do not pass --host option to configure when it is the
    same as the --build option.  This is mandatory with Autoconf 2.52 and
    newer and was causing the C++ ABI to have a wrong value in config.h.

  [ Thomas Weber ]
  * New upstream release
    + axis locations now appear on the correct positions (closes: #492076)
  * Removed patches (applied upstream):
    + patches/50_include-cstring-mxarray.dpatch
    + patches/50_add_syspath.dpatch