@@ -1,12 +1,16 @@
 octave3.0 (1:3.0.3~rc2-1) UNRELEASED; urgency=low
 
+  [ Thomas Weber ]
   * Change dont_set_helvetica.dpatch to use an asterisk (*) instead of an
     empty string for the font; see
     http://thread.gmane.org/gmane.comp.gnu.octave.bugs/9843
     for the reasoning. Saving greek symbols as .png or .jpeg continues to not
     work with this, though.
 
- -- Thomas Weber <thomas.weber.mail@gmail.com>  Wed, 24 Sep 2008 20:49:07 +0200
+  [ Rafael Laboissiere ]
+  * debian/rules: Cope with tilde (~) in the upstream version number
+
+ -- Rafael Laboissiere <rafael@debian.org>  Tue, 30 Sep 2008 16:27:03 +0200
 
 octave3.0 (1:3.0.2-4) experimental; urgency=low
 
